<resources>
    <string name="app_name" translatable="false">ScanR</string>

    <string name="dialog_message">Position the blue line over the resistor\'s color bands with the tolerance band to the right.
        The left border should align with the first band, the right one with the last band.
        When you\'re ready press Scan.\n
        However, do not scan the tolerance band!</string>
    <string name="dialog_title">How to…</string>
    <string name="dialog_ok">Got it!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result_screen">ResultScreen</string>
    <string name="title_activity_manual_detection">ManualDetection</string>
    <string name="pref_header_about">About</string>
    <string name="version">Version</string>
    <string name="unknown">Unknown</string>
    <string name="author">Author</string>
    <string name="author_text" translatable="false">Stefan Zimmer</string>
    <string name="xda_thread">View XDA Thread</string>
    <string name="github">View source code on GitHub</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_scanning">Scanning</string>
    <string name="pref_title_number_of_scans">Number of valid scans before calculating final result</string>
    <string name="pref_title_default_torch_state">Torch on by default</string>
    <string name="pref_title_save_torch_state">Save the previous torch state</string>
    <string name="pref_title_advanced_result">Use advanced Result Screen</string>
    <string name="pref_summary_advanced_result">Allows direct modification of the color combo, but might require more performance</string>
    <string name="pref_summary_advanced_result_off">Requires less performance but does not offer modification of the recognized color combo</string>
    <string name="pref_title_debug">Debugging Mode</string>
    <string name="pref_summary_debug">Show some debugging information while scanning</string>
    <string name="pref_title_fps">Show FPS while scanning</string>
    <string name="pref_summary_fps">Shows a small overlay with the current FPS rate</string>
    <string name="three_band_mode">3-Band-Mode</string>
    <string name="four_band_mode">4-Band-Mode</string>
    <string name="manual">Manual</string>
    <string name="mode">Mode</string>
    <string name="scan">Scan</string>
    <string name="flash">Flash</string>
    <string name="flash_off">Flash Off</string>
    <string name="flash_on">Flash On</string>
    <string name="result">Result</string>
    <string name="toast_key_out_of_range">There was an error parsing the color for the result screen. Please grab a logcat of the issue and send it to me so I can fix it.</string>

</resources>
