<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <com.laufersteppenwolf.resistorscanner.ResistorCameraView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
        android:id="@+id/ResistorCameraView"
        opencv:show_fps="false"
        opencv:camera_id="any"
        tools:context=".MainActivity"/>

    <SeekBar
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/seekbar_horizontal_margin"
        android:paddingRight="@dimen/seekbar_horizontal_margin"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ResistorCameraView"
        android:layout_centerInParent="true"
        android:id="@+id/CameraZoomControls"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash"
        android:id="@+id/flashSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:checked="true"
        android:textOff="@string/flash_off"
        android:textOn="@string/flash_on" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:text="@string/scan"
        android:id="@+id/scan"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"
        android:id="@+id/modeSwitch"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textOff="@string/three_band_mode"
        android:textOn="@string/four_band_mode"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual"
        android:id="@+id/manualButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
