<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_header_scanning">

        <EditTextPreference
            android:key="number_of_scans"
            android:title="@string/pref_title_number_of_scans"
            android:defaultValue="20"
            android:selectAllOnFocus="true"
            android:inputType="number" />

        <SwitchPreference
            android:key="debug"
            android:title="@string/pref_title_debug"
            android:summary="@string/pref_summary_debug"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="show_fps"
            android:title="Show FPS while scanning"
            android:summary="Shows a small overlay with the current FPS rate"
            android:defaultValue="false" />

    </PreferenceCategory>
</PreferenceScreen>
